--- a/site_com_repositório/style.css
+++ b/site_com_repositório/style.css
@@ -10,18 +10,21 @@ display: flex;
 flex-direction: column;
 text-align: center;
 max-height: 100vh;
-min-width: 100vw;
+max-width: 100vw;
 background: linear-gradient(to left, #b463eb, #C53BD9);
 color: white;}
 main{
-    background: #af4ef0bb;
-    margin: 12%;
+    max-width: 375px;
+    background: #635bf6de;;
+    margin: 6% 18% 0% 18%;
     border-radius: 12px;
-    padding: 2.5em;
-    box-shadow: 5px 5px 20px #4c43f84f;
+    padding: 2.0em 3.5em;
+    box-shadow: 5px 5px 20px #7A4ED4;
+    font-size: 1em;
 }
 header{
     margin-bottom: 1.7em;
+    color: #85CAF6;
 }
 #dados{
     margin: 1em;
@@ -29,11 +32,63 @@ header{
 }
 #nome, #gmail{
     margin: 0px 0px 12px 0px;
-    border-radius: 8px;
+    border-radius: 11px;
     padding: 7px;
     box-shadow: 4px 4px 7px #C53BD9;
     font-size: 1em;
     outline: none;
     text-align: center;
-    width: 200px;
+    width: 280px;
 }
+#nome:hover, #gmail:hover{
+    cursor: pointer;
+    background: linear-gradient(to right,#ceecff, #b1dcf7);
+}
+#progamaa{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+}
+#progamaa span{
+    font-size: 1.2em;
+    margin-bottom: 9px;
+}
+.espacamento{
+    margin-left: 12px;
+}
+#progama{
+    margin: 11px 0px ;
+    text-align: justify;
+}
+
+#texto1{
+    margin-bottom: 12px;
+    font-size: 1.1em;
+}
+#umpouco p{
+    margin-bottom: 5px;
+}
+textarea{
+    border-radius: 5px;
+    outline: none;
+}
+#botao{
+    padding: 12px;
+    font-size: 1.3em;
+    border-radius: 6px;
+    background:linear-gradient(to right, #A720F6,#5D1CD4);
+    margin-top: 5px;
+}
+@media screen and (min-width: 820px){
+    main{margin: 3% 15% 3% 33%;}
+    #desnvolve{margin-left: 5%;}
+}
+@media screen and (max-width:600px){
+  main{
+      margin: 35px;
+  }
+  #nome, #gmail{
+      width: 170px;
+  }
+}
+    
